@@ -11,6 +11,8 @@ S3method(pcor,matrix)
 S3method(sparsity,matrix)
 S3method(sparsity,simple_triplet_matrix)
 S3method(tcosine,matrix)
+S3method(tcovar,matrix)
+S3method(tpcor,matrix)
 export(cosine)
 export(cosine_wt)
 export(covar)
@@ -20,4 +22,6 @@ export(pcor_wt)
 export(scaler)
 export(sparsity)
 export(tcosine)
+export(tcovar)
+export(tpcor)
 useDynLib(coop, R_co_mat, R_co_mat_pairwise, R_co_vecvec, R_co_sparse, R_sparsity_int, R_sparsity_dbl, R_csc_to_coo, R_fast_naomit, R_naomit_vecvec, R_scaler, R_check_badvals)
