@@ -35,6 +35,15 @@ only 469 KiB, a 15,000-fold difference.
 Note that cosine is always computed in place.
 }
 
+\section{The \code{t} functions}{
+
+The package also includes "t" functions, like \code{tcosine()}. These
+behave analogously to \code{tcrossprod()} as \code{crossprod()} in base R.
+So of \code{cosine()} operates on the columns of the input matrix, then
+\code{tcosine()} operates on the rows.  Another way to think of it is,
+\code{tcosine(x) = cosine(t(x))}.
+}
+
 \section{Implementation Details}{
 
 Multiple storage schemes for the input data are accepted.  
