@@ -1,6 +1,7 @@
 Release 0.5-1 (//):
   * Add scaler() to center and/or scale efficiently.
-  * Use default(none) in all threaded OpenMP statements.
+  * Better safety in internal OpenMP statements.
+  * Add tcosine(), tpcor(), tcovar().
 
 Release 0.5-0 (4/24/2016):
   * Implement inplace methods for correlation and covariance (correlation is
